005 ==> 378098 - Update meta data from selected images (generated outside digikam) does not work anymore.
006 ==> 378219 - Optimize includes and polish.
007 ==> 372972 - Find duplicates "search in drop down" only shows 1 item.
008 ==> 378360 - digiKam 5.5 crashes on startup after update.
009 ==> 378626 - Export menu empty.
010 ==> 353331 - can’t limit fuzzy-search to albums [patch].
011 ==> 300565 - When selecting folders, subfolders are not selected.
012 ==> 183425 - Advanced search by tags : "any tags" option does not work.
013 ==> 376621 - Cannot Enter Data In Geolocation Editor Details Tab.
014 ==> 376049 - Any album appears empty on startup until I select another album to view.
015 ==> 378836 - digiKam Crash when start searching for persons.
016 ==> 378804 - lensfun uses only one core, pls. parallize [patch].
017 ==> 378703 - Download page : add link to pre-version bundle repository from GDrive.
018 ==> 379038 - Camera date Tool-Tip Option Appears Ineffective.
019 ==> 378625 - Very slow start.
020 ==> 379152 - Presentation mode cannot be exited/quitted.
021 ==> 374838 - Advanced Search not finding "Not Tagged" images.
022 ==> 379326 - Import-Tool doesn't rename properly.
023 ==> 379442 - AppImage package does not find the files needed for panorama.
024 ==> 379226 - digiKam Properties Metadata not shown in Editor Captions.
025 ==> 216359 - New "floating cards" theme for html gallery [patch].
026 ==> 319606 - New "SimpleRounded" theme for html gallery [patch].
027 ==> 334589 - New "blue with curves" theme for html gallery [patch].
028 ==> 379526 - Inconsistent separator use in mime setup.
029 ==> 156900 - Allow to use selected images instead full album contents in html gallery.
030 ==> 373247 - No chronological ordering of tags anymore.
031 ==> 379675 - Geolocation feature links to Multimap.com and MSN Maps.
032 ==> 140177 - HTML export plugin should autorotate images.
033 ==> 378855 - Crashes on startup.
034 ==> 